Date	Added
11/23
	* @charoption is now #option [MC Cameri]
	* @charpetfriendly is now #petfriendly [MC Cameri]
	* @charstats is now #stats [MC Cameri]
        * Skill Updates: [celest]
          - Added some code for the new guild skills (10%) and Moonlit Petals (5%)
          - Notes to other devs: Guild skills with id's 10000-10014 will be stored in
            skill_db[500-514]
          - Corrected Hilt Binding
          - Corrected Assassin Cross' dual wield
          - Changed player_cloak_check_type to yes by default and edited description
            since it's already fully implemented.

11/22
	* (TXT)Stripped some code off read_gm_accounts() and made with it addGM() [MC Cameri]
	  -Usage: addGM(account_id,level);
	* (TXT)Changed GM_accounts.txt to meet new standards. [MC Cameri]
	* (TXT)Enabled the use of id ranges in GM_accounts.txt [MC Cameri]
	* Added a few free()'s so that I am sure it freed the allocated memory (char & login) [Codemaster]
	* Changed monsters_ignore_gm option to a level value. [Valaris]
	  (accounts greater than or equal to this setting won't be attacked by aggressives.)
	* Fixed mapflag #s and constants for setmapflag and remove mapflag. [Valaris]
        * Added skill names for kRO 11/23's new skills [celest]
          - Preserve, Full Strip, Weapon Refine, Slim Pitcher, Full Chemical Protection,
            (Throw) Tomahawk
	* timer.c static int timer_heap_max=0; //fix by Shinomori from eA forums
	  ititialize static var!!!
	* Added the old effect list # into effect_list.txt of spira's. [shadow]
	* Added new flag (#3) to clif_specialeffect [MC Cameri]
	* @doom,@die,@doommap now display the Dark Cross effect on you. [MC Cameri]
11/21
	* Display IP when wdata is expanded [Wizputer]
	* Added bClassChange,%; Has random chance to turn monster into another monster. [Valaris]
	* Re-Fixed Trade/Vending exploit [Lupus]
	* Fixed @whozeny. [Valaris]
	* Added rest of mapflags to const.txt. [Valaris]